<resources>
    <string name="app_name">SocialNetworkThoughtsAndroidApp</string>

    <string name="username_input_hint">Имя пользователя</string>
    <string name="username_input_helper_text">Введите имя пользователя</string>

    <string name="password_input_hint">Пароль</string>
    <string name="password_input_helper_text">Введите пароль</string>

    <string name="nickname_input_hint">Никнейм</string>
    <string name="nickname_input_helper_text">Введите никнейм</string>

    <string name="theme_input_hint">Тема</string>
    <string name="theme_input_helper_text">Введите тему поста</string>

    <string name="content_input_hint">Пост</string>
    <string name="content_input_helper_text">Введите содержимое поста</string>

    <string name="comment_input_text">Ваш комментарий</string>

    <string name="search_input_hint">Поиск…</string>

    <string name="login_button_text">Войти</string>
    <string name="register_button_text">Зарегистрироваться</string>
    <string name="back_button">back_button</string>

    <string name="entry">Вход</string>
    <string name="registration">Регистрация</string>

    <string name="subscribes">Подписки %1$d</string>
    <string name="subscribers">Подписчики %1$d</string>

    <string name="files_attached">Прикреплено файлов: %1$d</string>

    <string name="send">Отправить</string>

    <string name="home">Главная</string>
    <string name="content_description_home">Кнопка для перехода на главную страницу</string>

    <string name="search">Поиск</string>
    <string name="content_description_search">Кнопка для перехода к поиску</string>

    <string name="post">Новый пост</string>
    <string name="content_description_post">Кнопка для перехода к созданию нового поста</string>

    <string name="notifications">Уведомления</string>
    <string name="content_description_notifications">Кнопка для перехода к уведомлениям</string>

    <string name="profile">Профиль</string>
    <string name="content_description_profile">Кнопка для перехода к профилю</string>

    <string name="check">Сохранить</string>
    <string name="content_description_check">Сохранить пост</string>

    <string name="settings">Настройки</string>
    <string name="content_description_settings">Настройки профиля</string>

    <string name="remove">Удалить</string>
    <string name="content_description_remove">Удалить пост</string>

    <string name="post_menu_description">Меню для действий с постом</string>
    <string name="gallery_button_description">Прикрепить фотографии к посту</string>

    <string name="image">image</string>

</resources>